# dumbo

./: .gitignore  PLAN.md  README.md  SECURITY.md  pyproject.toml
config/: default.yaml
config/profiles/: high_end.yaml  low_resource.yaml  recommended.yaml
scripts/: install_windows.ps1  pull_models.ps1  run_dumbo.ps1
src/dumbo/: __main__.py  cli.py  config.py  logging_setup.py  paths.py
src/dumbo/agent/: __init__.py  approval.py  loop.py  memory_context.py  model_router.py  ollama_client.py  prompts.py  schemas.py
src/dumbo/memory/: __init__.py  embeddings.py  profile.py  sqlite_store.py  vector_store.py
src/dumbo/skills/: __init__.py  library.py  recorder.py  runner.py  schema.py
src/dumbo/tools/: __init__.py  apps.py  audit.py  base.py  browser.py  desktop.py  factory.py  filesystem.py  media.py  memory.py  policy.py  powershell.py  registry.py  skills.py  vision.py
src/dumbo/ui/: __init__.py  server.py  tray.py
src/dumbo/ui/web/: index.html
src/dumbo/voice/: __init__.py  loop.py  microphone.py  speaker.py  stt.py  tts.py  vad.py  volume.py
tests/: test_agent_loop_mocked.py  test_filesystem_tools.py  test_hardening_regressions.py  test_memory_store.py  test_policy.py  test_powershell_policy.py  test_skill_schema.py  test_tool_registry.py  test_voice_loop.py
